syntax = "proto3";

package chatbot;

// Represents a reference to a story
message StoryReferenceBlock {
  int32 id = 1;
  string name = 2;
}

// Represents a page message configuration
message PageMessageBlock {
  string bot_id = 1;
  string id = 2;  // Generated by backend
  repeated string urls = 3;
  bool show_after_delay = 4;
  int32 delay = 5;
  string message_type = 6;
  string text_message = 7;

  // Story message type
  StoryReferenceBlock selected_story = 8;
}
